--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
+    "axios": "^0.25.0",
     "chart.js": "3.4.1",
     "chroma-js": "2.1.2",
     "prop-types": "15.7.2",
@@ -76,5 +77,6 @@
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.3.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
