--- a/client/package.json
+++ b/client/package.json
@@ -33,10 +33,12 @@
     "react": "17.0.2",
     "react-chartjs-2": "3.0.4",
     "react-dom": "17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-github-btn": "1.2.1",
     "react-router-dom": "6.0.2",
     "react-scripts": "4.0.3",
     "react-table": "7.7.0",
+    "styled-components": "^5.3.3",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.0",
     "web-vitals": "1.0.1",
