--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-github-btn": "1.2.1",
     "react-router-dom": "6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-table": "7.7.0",
     "styled-components": "^5.3.3",
     "stylis": "4.0.10",
