--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "styled-components": "^5.3.3",
     "stylis": "4.0.10",
     "stylis-plugin-rtl": "2.1.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "1.0.1",
     "yup": "0.32.9"
   },
