--- a/client/package.json
+++ b/client/package.json
@@ -81,5 +81,5 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.3.2"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://center-education.onrender.com/"
 }
